[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/Skins.gd" type="Script" id=1]
[ext_resource path="res://res/fonts/charybdis/Charybdis.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[node name="SkinsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HSplitContainer" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 70.0
dragger_visibility = 1

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 70 )

[node name="BtMenu" type="Button" parent="VSplitContainer/HBoxContainer/CenterContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 87.0
margin_bottom = 57.0
rect_min_size = Vector2( 75, 45 )
custom_fonts/font = SubResource( 1 )
text = "Menu"

[node name="Label" type="Label" parent="VSplitContainer/HBoxContainer"]
margin_left = 112.0
margin_top = 5.0
margin_right = 1024.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Skins"
align = 1
valign = 1

[node name="HBoxContainer2" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 82.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/HBoxContainer2"]
margin_right = 1024.0
margin_bottom = 50.0

[node name="BtAll" type="Button" parent="VSplitContainer/HBoxContainer2/HBoxContainer"]
margin_right = 167.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "all"

[node name="BtCommon" type="Button" parent="VSplitContainer/HBoxContainer2/HBoxContainer"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "common"

[node name="BtRare" type="Button" parent="VSplitContainer/HBoxContainer2/HBoxContainer"]
margin_left = 342.0
margin_right = 509.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "rare"

[node name="BtEpic" type="Button" parent="VSplitContainer/HBoxContainer2/HBoxContainer"]
margin_left = 513.0
margin_right = 680.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "epic"

[node name="BtLegendary" type="Button" parent="VSplitContainer/HBoxContainer2/HBoxContainer"]
margin_left = 684.0
margin_right = 851.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "legendary"

[node name="BtDivine" type="Button" parent="VSplitContainer/HBoxContainer2/HBoxContainer"]
margin_left = 855.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "divine"

[node name="ScrollContainer" type="ScrollContainer" parent="VSplitContainer/HBoxContainer2"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer/HBoxContainer2/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VSplitContainer/HBoxContainer2/ScrollContainer/CenterContainer"]
margin_left = 512.0
margin_top = 232.0
margin_right = 512.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 3
[connection signal="resized" from="." to="." method="_on_SkinsMenu_resized"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/CenterContainer/BtMenu" to="." method="_on_BtMenu_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer2/HBoxContainer/BtAll" to="." method="_on_BtAll_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer2/HBoxContainer/BtCommon" to="." method="_on_BtCommon_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer2/HBoxContainer/BtRare" to="." method="_on_BtRare_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer2/HBoxContainer/BtEpic" to="." method="_on_BtEpic_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer2/HBoxContainer/BtLegendary" to="." method="_on_BtLegendary_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer2/HBoxContainer/BtDivine" to="." method="_on_BtDivine_pressed"]
